--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -260,7 +260,8 @@
    "metadata": {},
    "source": [
     "**Your Answer**: *fill this in.*\n",
-    "\n"
+    "Bright rows represent test samples which are close to the average of training samples.\n",
+    "Bright columns represent training samples which are close to the average of test samples.\n"
    ]
   },
   {
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -327,11 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference was: 0.000000\n",
+      "Good! The distance matrices are the same\n"
+     ]
+    }
+   ],
    "source": [
     "# Now lets speed up distance matrix computation by using partial vectorization\n",
     "# with one loop. Implement the function compute_distances_one_loop and run the\n",
@@ -354,11 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference was: 0.000000\n",
+      "Good! The distance matrices are the same\n"
+     ]
+    }
+   ],
    "source": [
     "# Now implement the fully vectorized version inside compute_distances_no_loops\n",
     "# and run the code\n",
@@ -375,11 +394,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two loop version took 27.278077 seconds\n",
+      "One loop version took 63.497546 seconds\n",
+      "No loop version took 0.678364 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's compare how fast the implementations are\n",
     "def time_function(f, *args):\n",
@@ -456,12 +485,14 @@
     "for k in k_choices:\n",
     "    accuracies = []\n",
     "    for i in range(num_folds):\n",
-    "        X_train_cv = np.vstack(X_train_folds[:i] + X_train_folds[i+1:])\n",
+    "        X_train_cv = np.concatenate(X_train_folds[:i] + X_train_folds[i+1:])\n",
     "        X_test_cv = X_train_folds[i]\n",
-    "        y_train_cv = np.vstack(y_train_folds[:i] + y_train_folds[i+1:])\n",
+    "        y_train_cv = np.concatenate(y_train_folds[:i] + y_train_folds[i+1:])\n",
     "        y_test_cv = y_train_folds[i]\n",
     "        \n",
     "        classifier.train(X_train_cv, y_train_cv)\n",
+    "        dists = classifier.compute_distances_no_loops(X_train_cv)\n",
+    "        \n",
     "        y_test_pred = classifier.predict_labels(dists, k)\n",
     "        num_correct = np.sum(y_test_pred == y_test_cv)\n",
     "        num_test = X_test_cv.shape[0]\n",
