--- a/assignment2/ConvolutionalNetworks.ipynb
+++ b/assignment2/ConvolutionalNetworks.ipynb
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -369,200 +369,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.41794341  1.39710028]\n",
-      " [-1.4255293  -0.3763567 ]] 1 0 1\n",
-      "[[-1.78590431 -0.70882773]\n",
-      " [-0.34227539  0.29490764]] 3 0 3\n",
-      "[[-0.07472532 -0.77501677]\n",
-      " [-0.83732373  0.95218767]] 3 0 3\n",
-      "[[-0.1497979   1.86172902]\n",
-      " [ 1.32931659  0.52465245]] 1 0 1\n",
-      "[[-0.14809998  0.88953195]\n",
-      " [ 0.23185863 -0.79725793]] 1 0 1\n",
-      "[[ 0.12444653  0.99109251]\n",
-      " [ 0.12001014 -0.65679608]] 1 0 1\n",
-      "[[ 0.03514666  0.26207083]\n",
-      " [ 0.26917456  0.333667  ]] 3 0 3\n",
-      "[[ 0.14320173  0.90101716]\n",
-      " [ 0.27423503  0.76215717]] 1 0 1\n",
-      "[[-0.69550058  0.29214712]\n",
-      " [-1.58535997 -0.01530138]] 1 0 1\n",
-      "[[-0.38489942  0.1228747 ]\n",
-      " [-0.32156083  0.56834936]] 3 0 3\n",
-      "[[-1.42904497  0.70286283]\n",
-      " [-0.19961722  1.27286625]] 3 0 3\n",
-      "[[-0.85850947 -1.14042979]\n",
-      " [ 1.27292534  1.58102968]] 3 0 3\n",
-      "[[-1.75626715  0.9217743 ]\n",
-      " [-2.51335181 -1.15740245]] 1 0 1\n",
-      "[[-0.6753054  -1.43443616]\n",
-      " [-0.70470413 -1.04978879]] 0 0 0\n",
-      "[[ 0.47021125  0.03196734]\n",
-      " [-1.90795589  0.49258765]] 3 0 3\n",
-      "[[ 0.04448574  0.47824879]\n",
-      " [ 0.83736166 -1.4288134 ]] 2 0 2\n",
-      "[[-0.18982427 -1.14094943]\n",
-      " [-0.25704466 -0.12841368]] 3 0 3\n",
-      "[[-2.12570755 -0.41354791]\n",
-      " [ 0.26338593  0.1672181 ]] 2 0 2\n",
-      "[[ 0.44148975  0.16411113]\n",
-      " [-0.30871951 -1.26754462]] 0 0 0\n",
-      "[[-0.65505065 -0.30212765]\n",
-      " [-0.22319022 -0.82993433]] 2 0 2\n",
-      "[[-1.11271826 -0.44613095]\n",
-      " [-2.71484268  0.65576139]] 3 0 3\n",
-      "[[-0.40001719  0.36343905]\n",
-      " [-1.17004858  0.0598685 ]] 1 0 1\n",
-      "[[ 0.94992777 -0.32379447]\n",
-      " [-1.64182729 -0.28069634]] 0 0 0\n",
-      "[[ 0.27031704 -0.63381148]\n",
-      " [-0.67946972 -1.80480094]] 0 0 0\n",
-      "[[ 0.53770564 -0.12171369]\n",
-      " [ 0.03070661 -0.44972639]] 0 0 0\n",
-      "[[-1.04250949  0.13828792]\n",
-      " [ 0.14447532 -0.35229594]] 2 0 2\n",
-      "[[-0.22557183 -1.1928829 ]\n",
-      " [ 0.4882136  -0.4347099 ]] 2 0 2\n",
-      "[[-0.68320696  0.19909408]\n",
-      " [-0.28692265 -0.84338097]] 1 0 1\n",
-      "[[-0.10827394  0.85434757]\n",
-      " [-0.97791748 -0.63978524]] 1 0 1\n",
-      "[[-0.90377338 -1.0525584 ]\n",
-      " [-0.00880963  0.36213294]] 3 0 3\n",
-      "[[-0.30409794  0.18083726]\n",
-      " [ 0.35148162 -1.20064035]] 2 0 2\n",
-      "[[-0.4125417   1.22913948]\n",
-      " [-0.84272962  1.61832501]] 3 0 3\n",
-      "[[-2.39079478  0.88256212]\n",
-      " [ 0.91447992 -0.86943856]] 2 0 2\n",
-      "[[-1.12082008  0.12416778]\n",
-      " [ 0.13741017 -0.72261465]] 2 0 2\n",
-      "[[-2.43434598 -1.62701704]\n",
-      " [-0.6755518  -0.04084145]] 3 0 3\n",
-      "[[-1.10613945  2.00862337]\n",
-      " [-1.15755894 -0.67498124]] 1 0 1\n",
-      "[[ 0.44252644 -0.11970425]\n",
-      " [ 1.97009461 -0.81967191]] 2 0 2\n",
-      "[[ 0.59700586 -2.0399063 ]\n",
-      " [ 0.42367521 -1.83570698]] 0 0 0\n",
-      "[[-0.6447033  -1.61700346]\n",
-      " [ 1.00583627  0.05834497]] 2 0 2\n",
-      "[[-1.85570785  0.7480524 ]\n",
-      " [ 0.98687019  0.27827513]] 2 0 2\n",
-      "[[ 0.119619    2.13935149]\n",
-      " [ 0.59190367 -0.56016357]] 1 0 1\n",
-      "[[-0.77429891 -0.42011785]\n",
-      " [ 1.03339676 -1.20718575]] 2 0 2\n",
-      "[[-0.77768316 -1.0141586 ]\n",
-      " [-0.93426589  0.92234837]] 3 0 3\n",
-      "[[-2.30296116 -0.3678455 ]\n",
-      " [ 0.37364743 -0.26051388]] 2 0 2\n",
-      "[[ 0.61250765 -0.62647791]\n",
-      " [-0.2476718   0.73309629]] 3 0 3\n",
-      "[[-0.40298073  0.08972095]\n",
-      " [ 1.09734348  0.15542587]] 2 0 2\n",
-      "[[-0.58799396 -0.57508564]\n",
-      " [-0.37233773 -0.32986357]] 3 0 3\n",
-      "[[ 0.57878641 -1.74506882]\n",
-      " [-0.04243928 -0.00396778]] 0 0 0\n",
-      "[[ 0.20182891 -0.66278042]\n",
-      " [ 0.60240413 -0.72649847]] 2 0 2\n",
-      "[[ 0.15851809 -1.63260189]\n",
-      " [-1.16159895  2.46295591]] 3 0 3\n",
-      "[[-0.9308637  -0.63096867]\n",
-      " [ 1.42103612 -0.99945524]] 2 0 2\n",
-      "[[-1.88697885 -1.1058167 ]\n",
-      " [-0.17333223 -0.36876292]] 2 0 2\n",
-      "[[ 0.91232531  0.95414088]\n",
-      " [ 0.71473612 -0.31626846]] 1 0 1\n",
-      "[[ 0.98144221 -0.16850276]\n",
-      " [ 0.08296379  0.74924361]] 0 0 0\n",
-      "[[-1.42237478 -0.08069125]\n",
-      " [ 0.84388215 -0.42419808]] 2 0 2\n",
-      "[[ 0.31726684 -0.52900651]\n",
-      " [-0.12423677 -1.81755454]] 0 0 0\n",
-      "[[ 0.0289251  -0.38761311]\n",
-      " [-0.14805047 -0.66026178]] 0 0 0\n",
-      "[[ 1.35820226 -1.32240408]\n",
-      " [ 0.6136318   1.10705233]] 0 0 0\n",
-      "[[ 1.89688433 -1.27159063]\n",
-      " [-3.10557639 -0.59156484]] 0 0 0\n",
-      "[[-1.21855637  0.4130675 ]\n",
-      " [ 0.48635629  0.41823325]] 2 0 2\n",
-      "[[-0.11310806  0.15903716]\n",
-      " [ 0.38171273  0.27163459]] 2 0 2\n",
-      "[[-1.63290047 -0.11545225]\n",
-      " [-0.23639883  1.00146096]] 3 0 3\n",
-      "[[ 0.39019445  0.42610951]\n",
-      " [-2.27132921  1.56419656]] 3 0 3\n",
-      "[[ 0.22602017 -0.04113994]\n",
-      " [-0.03793765 -0.61453261]] 0 0 0\n",
-      "[[ 1.2126287  -0.51909669]\n",
-      " [ 1.34369431  0.78545959]] 2 0 2\n",
-      "[[ 1.9219015   1.56596926]\n",
-      " [ 0.52003267 -0.47830574]] 0 0 0\n",
-      "[[ 0.26764421  1.84441857]\n",
-      " [-0.20406351 -0.95556491]] 1 0 1\n",
-      "[[-0.13559209  0.88544285]\n",
-      " [-1.68961142  0.37475897]] 1 0 1\n",
-      "[[ 0.8202295  -1.85007976]\n",
-      " [-1.66135415  1.07564149]] 3 0 3\n",
-      "[[ 0.82418722 -1.28956103]\n",
-      " [ 1.25593369  2.92560482]] 3 0 3\n",
-      "[[-1.50314505 -1.36002559]\n",
-      " [ 1.03904582  0.38633708]] 2 0 2\n",
-      "[[ 1.34741254  0.73430342]\n",
-      " [-0.29078883  2.27638827]] 3 0 3\n",
-      "[[ 0.96439766 -1.32027378]\n",
-      " [ 2.53695942  1.08655384]] 2 0 2\n",
-      "[[-0.55212761  0.99346954]\n",
-      " [-0.17462457 -0.0360674 ]] 1 0 1\n",
-      "[[ 0.19431367  1.60200785]\n",
-      " [ 0.19221726 -0.31258298]] 1 0 1\n",
-      "[[-1.47107931 -0.77805307]\n",
-      " [ 0.70551242 -1.51141762]] 2 0 2\n",
-      "[[-0.78633216  0.0625484 ]\n",
-      " [ 0.42741187 -1.70588218]] 2 0 2\n",
-      "[[-0.61119545 -0.11340764]\n",
-      " [ 1.24092424 -1.0589799 ]] 2 0 2\n",
-      "[[ 0.6709245   0.89481411]\n",
-      " [ 0.04659436 -0.19981364]] 1 0 1\n",
-      "[[-0.01211651  0.94124315]\n",
-      " [ 0.29302037  0.11813175]] 1 0 1\n",
-      "[[ 1.39208744 -1.1528216 ]\n",
-      " [-0.08407672 -0.72093009]] 0 0 0\n",
-      "[[ 1.93803585 -0.8759025 ]\n",
-      " [-0.46106825  1.41494396]] 0 0 0\n",
-      "[[-1.24067765 -1.75754516]\n",
-      " [-0.12185002 -0.7737549 ]] 2 0 2\n",
-      "[[ 0.29674551 -0.34874437]\n",
-      " [ 0.29083103 -0.35906074]] 0 0 0\n",
-      "[[-1.22860975 -0.16314373]\n",
-      " [-0.12912315 -0.61534303]] 2 0 2\n",
-      "[[-0.66462839  2.67725356]\n",
-      " [ 0.07662236 -0.47899396]] 1 0 1\n",
-      "[[ 0.51874157  0.78721802]\n",
-      " [-0.76025724  1.08202809]] 3 0 3\n",
-      "[[ 0.96909312  0.19702705]\n",
-      " [-0.10603494 -1.34868816]] 0 0 0\n",
-      "[[-0.89680627  1.34731014]\n",
-      " [ 1.22043425  0.49444773]] 1 0 1\n",
-      "[[ 1.22355788  1.14618817]\n",
-      " [-0.7704285   0.11932881]] 0 0 0\n",
-      "[[-0.27533581 -0.30213293]\n",
-      " [-1.67664312  1.73731292]] 3 0 3\n",
-      "[[ 0.24411865  1.27987574]\n",
-      " [-1.2136063   0.19252377]] 1 0 1\n",
-      "[[ 0.29221021  0.44942139]\n",
-      " [ 1.52764698  0.24713061]] 2 0 2\n",
-      "[[ 1.2452335   2.67294293]\n",
-      " [ 0.12374819  0.19347205]] 1 0 1\n",
-      "[[-1.22288995  0.62187796]\n",
-      " [ 0.62578736  0.89128476]] 3 0 3\n",
-      "[[-1.82586077 -0.75989191]\n",
-      " [-0.24900518  0.61942217]] 3 0 3\n",
       "Testing max_pool_backward_naive function:\n",
-      "dx error:  1.0\n"
+      "dx error:  3.27562514223e-12\n"
      ]
     }
    ],
