--- a/assignment2/PyTorch.ipynb
+++ b/assignment2/PyTorch.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -129,9 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -168,9 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +294,7 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -332,10 +332,10 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +359,7 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -398,7 +398,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 17 ms per loop\n"
+      "10 loops, best of 3: 21 ms per loop\n"
      ]
     }
    ],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -425,7 +425,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 16.9 ms per loop\n"
+      "The slowest run took 4.15 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "1000 loops, best of 3: 933 µs per loop\n"
      ]
     }
    ],
@@ -460,33 +461,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "loss_fn = None\n",
-    "optimizer = None\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.RMSprop(fixed_model_gpu.parameters(), lr=1e-3)\n",
     "pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-44-2c52722e88bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Use the correct y values and the predicted y values to compute the loss.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_var\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mprint_every\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t = 100, loss = 1.4638\n",
+      "t = 200, loss = 1.5160\n",
+      "t = 300, loss = 1.3828\n",
+      "t = 400, loss = 1.3405\n",
+      "t = 500, loss = 1.2047\n",
+      "t = 600, loss = 1.2915\n",
+      "t = 700, loss = 1.2649\n"
      ]
     }
    ],
@@ -529,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -587,11 +590,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 1 / 1\n",
+      "t = 100, loss = 1.4337\n",
+      "t = 200, loss = 1.4947\n",
+      "t = 300, loss = 1.4123\n",
+      "t = 400, loss = 1.0853\n",
+      "t = 500, loss = 1.0832\n",
+      "t = 600, loss = 1.3735\n",
+      "t = 700, loss = 1.2094\n",
+      "Checking accuracy on validation set\n",
+      "Got 575 / 1000 correct (57.50)\n"
+     ]
+    }
+   ],
    "source": [
     "torch.cuda.random.manual_seed(12345)\n",
     "fixed_model_gpu.apply(reset)\n",
@@ -665,21 +685,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 1 / 10\n",
+      "t = 100, loss = 1.9366\n",
+      "t = 200, loss = 1.8204\n",
+      "t = 300, loss = 1.7414\n",
+      "t = 400, loss = 1.4403\n",
+      "t = 500, loss = 1.4500\n",
+      "t = 600, loss = 1.5427\n",
+      "t = 700, loss = 1.6590\n",
+      "Starting epoch 2 / 10\n",
+      "t = 100, loss = 1.2816\n",
+      "t = 200, loss = 1.3513\n",
+      "t = 300, loss = 1.4475\n",
+      "t = 400, loss = 1.0620\n",
+      "t = 500, loss = 1.1220\n",
+      "t = 600, loss = 1.2297\n",
+      "t = 700, loss = 1.4143\n",
+      "Starting epoch 3 / 10\n",
+      "t = 100, loss = 1.0315\n",
+      "t = 200, loss = 1.0914\n",
+      "t = 300, loss = 1.2922\n",
+      "t = 400, loss = 0.9429\n",
+      "t = 500, loss = 0.9348\n",
+      "t = 600, loss = 1.0769\n",
+      "t = 700, loss = 1.1499\n",
+      "Starting epoch 4 / 10\n",
+      "t = 100, loss = 0.8539\n",
+      "t = 200, loss = 0.9599\n",
+      "t = 300, loss = 1.1406\n",
+      "t = 400, loss = 0.8558\n",
+      "t = 500, loss = 0.7689\n",
+      "t = 600, loss = 0.9457\n",
+      "t = 700, loss = 0.9993\n",
+      "Starting epoch 5 / 10\n",
+      "t = 100, loss = 0.7513\n",
+      "t = 200, loss = 0.8784\n",
+      "t = 300, loss = 1.0060\n",
+      "t = 400, loss = 0.7776\n",
+      "t = 500, loss = 0.6711\n",
+      "t = 600, loss = 0.8432\n",
+      "t = 700, loss = 0.8920\n",
+      "Starting epoch 6 / 10\n",
+      "t = 100, loss = 0.6669\n",
+      "t = 200, loss = 0.8133\n",
+      "t = 300, loss = 0.8875\n",
+      "t = 400, loss = 0.7258\n",
+      "t = 500, loss = 0.6091\n",
+      "t = 600, loss = 0.7593\n",
+      "t = 700, loss = 0.7968\n",
+      "Starting epoch 7 / 10\n",
+      "t = 100, loss = 0.5890\n",
+      "t = 200, loss = 0.7413\n",
+      "t = 300, loss = 0.7919\n",
+      "t = 400, loss = 0.6803\n",
+      "t = 500, loss = 0.5580\n",
+      "t = 600, loss = 0.6954\n",
+      "t = 700, loss = 0.7219\n",
+      "Starting epoch 8 / 10\n",
+      "t = 100, loss = 0.5299\n",
+      "t = 200, loss = 0.6573\n",
+      "t = 300, loss = 0.6875\n",
+      "t = 400, loss = 0.6315\n",
+      "t = 500, loss = 0.5179\n",
+      "t = 600, loss = 0.6458\n",
+      "t = 700, loss = 0.6834\n",
+      "Starting epoch 9 / 10\n",
+      "t = 100, loss = 0.4677\n",
+      "t = 200, loss = 0.5536\n",
+      "t = 300, loss = 0.5868\n",
+      "t = 400, loss = 0.5728\n",
+      "t = 500, loss = 0.4801\n",
+      "t = 600, loss = 0.5976\n",
+      "t = 700, loss = 0.6285\n",
+      "Starting epoch 10 / 10\n",
+      "t = 100, loss = 0.4143\n",
+      "t = 200, loss = 0.4751\n",
+      "t = 300, loss = 0.5104\n",
+      "t = 400, loss = 0.5082\n",
+      "t = 500, loss = 0.4519\n",
+      "t = 600, loss = 0.6071\n",
+      "t = 700, loss = 0.5308\n",
+      "Checking accuracy on validation set\n",
+      "Got 748 / 1000 correct (74.80)\n"
+     ]
+    }
+   ],
    "source": [
     "# Train your model here, and make sure the output of this cell is the accuracy of your best model on the \n",
     "# train, val, and test sets. Here's some code to get you started. The output of this cell should be the training\n",
     "# and validation accuracy on your best model (measured by validation accuracy).\n",
     "\n",
-    "model = None\n",
-    "loss_fn = None\n",
-    "optimizer = None\n",
+    "model = nn.Sequential( \n",
+    "            nn.Conv2d(3, 64, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2, 2),\n",
+    "            nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2, 2),\n",
+    "            nn.Conv2d(128, 256, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2, 2),\n",
+    "            Flatten(), \n",
+    "            nn.Linear(4096, 2048),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(2048, 1024),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(1024, 10),\n",
+    "        ).cuda()\n",
     "\n",
-    "train(model, loss_fn, optimizer, num_epochs=1)\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
+    "\n",
+    "train(model, loss_fn, optimizer, num_epochs=10)\n",
     "check_accuracy(model, loader_val)"
    ]
   },
@@ -710,13 +836,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking accuracy on test set\n",
+      "Got 7393 / 10000 correct (73.93)\n"
+     ]
+    }
+   ],
    "source": [
-    "best_model = None\n",
+    "best_model = model\n",
     "check_accuracy(best_model, loader_test)"
    ]
   },
